# project_amber

./: .gitignore  .gitmodules  build.bat  build.sh  instructions.md  meson.build  ols.json  readme.md  resources.md  run.bat  run.sh  todo  todo.md
.old/_examples/: 01_hello_triangle.odin  04_mandelbrot.odin  05_uniformbuffer.odin  build.bat
.old/common/: common.odin  gl_context.odin.bak  platform.odin
.old/gfx/: backend.odin  render_target.odin
.old/gfx/dx11/: context.odin
.old/gfx/old/: compute_bindings.odin  compute_pipeline.odin
docs/Docs/: Frontend-Backend Call Graph.canvas  Gfx copy.md  Gfx.md
docs/Docs/.obsidian/: workspace.json
docs/useful_logs/: logLaptopMultipleGpu.txt
libs/OpenCL/: OpenCL32.lib  constants.odin  procs.odin
libs/glfw/: constants.odin  native_linux.odin  native_windows.odin  wrapper.odin
libs/glfw/lib/: glfw3_custom32.lib
libs/project_amber/: project_amber.odin
libs/project_amber/renderer/: data.odin  renderer.odin
libs/project_amber/world/: block_behavour.odin  block_registar.odin  chunk.odin  world.odin
libs/vx_core/: cell.odin  context.odin  owned.odin  proc.odin  sync.odin
libs/vx_lib/_examples/: 03_hello_texture.odin  build.bat  build.sh
libs/vx_lib/common/: common.odin  cube.odin  doc.odin  gl.odin  gl_context.odin  glfw.odin  instancedmesh_procs.odin  metal.odin  platform.odin  wgpu_context.odin
libs/vx_lib/core/: context.odin  proc.odin  sync_cell.odin
libs/vx_lib/gfx/: abstract_buffer.odin  binding_metalimpl.odin  bindings.odin  bindings_glimpl.odin  buffer.odin  buffer_glimpl.odin  buffer_metalimpl.odin  cl_context.odin  common.odin  compute_bindings.odin  compute_buffer.odin  compute_pipeline.odin  doc.odin  framebuffer.odin  framebuffer_glimpl.odin  gl_context.odin  layout.odin  metal_context.odin  opencl.odin  pass.odin  pass_glimpl.odin  pass_metalimpl.odin  pipeline.odin  pipeline_glimpl.odin  pipeline_metalimpl.odin  procs.odin  render_buffer.odin  shader.odin  texture.odin  texture_bundle.odin  texture_glimpl.odin  wgpu.odin
libs/vx_lib/logic/: abstract_mesh.odin  camera_component.odin  dynamic_stotage.odin  instanced_mesh_component.odin  instanced_mesh_component.odin.old  mesh_component.odin  texture.odin  transform.odin
libs/vx_lib/math/: matrices.odin  slice.odin  vector.odin
libs/vx_lib/platform/: cocoa.odin  key_state.odin  platform.odin  window.odin  window_context.odin  window_descriptor.odin  window_helper.odin
libs/vx_lib/utils/: batcher.odin  mesh_builder.odin  texture_atlas.odin
libs/wgpu/: manual_bindings.odin  wgpu.odin
libs/wgpu/wgpu-native/: Cargo.toml  Makefile
old/src/: input.odin  main.odin
res/: shader.wgsl  shader_test.metal
res/project_amber/shaders/: full_solid_block.fs  full_solid_block.glsl.vs  skybox.fs
res/project_amber/textures/: block_atlas.csv
res/shaders/: basic copy 2.vs  basic copy.vs  basic.fs  basic.vs  quad.vs  skybox.vs
res/shaders/basic/: makefile
res/textures/: atlas.csv
res/vx_lib/shaders/: immediate_colored.glsl.vs  immediate_textured.fs  immediate_textured.vs  test.cl  test.fs  test.vs  texture.fs  texture.vs  ubo_test.vs
res/vx_lib/textures/: font_atlas.csv
shared/OpenCL/: constants.odin  procs.odin  types.odin
shared/fmod/: constants.odin  proc.odin  types.odin
shared/fmod/libs/: PUTYOURFMODLIBFILESHERE
shared/glfw/: native_darwin.odin  native_windows.odin  types.odin
shared/glfw/bindings/: bindings.odin  (+1 more)
shared/glslang/: glslang.odin
shared/vx_core/: cell.odin  context.odin  owned.odin  proc.odin  sync.odin  version.odin
src/: cube.odin  framework.c  framework.h  input.odin  main.c  main.cpp  main.odin  main.odin.bak  main.odin.old  offscreen.odin
subprojects/bgfx/: meson.build
subprojects/fastnoise/: meson.build
subprojects/glfw/: meson.build
subprojects/stb/: meson.build
subprojects/vx_lib/: meson.build
subprojects/vx_lib/src/vx_lib/gfx/: camera.cpp  camera.h  wgpu_utils.c  wgpu_utils.h
subprojects/vx_lib/src/vx_lib/gfx/bgfx/: shader_utils.cpp  shader_utils.h
subprojects/vx_lib/src/vx_lib/logic/components/: camera.cpp  camera.h  components.h  position.h  rotation.h  scale.h  transform.h
subprojects/vx_lib/src/vx_lib/logic/components/helpers/: casts.h  vector_builder.h  vector_builder_undef.h
subprojects/vx_lib/src/vx_lib/logic/components/transform/: position.h  rotation.h  scale.h  transform.cpp  transform.h
subprojects/vx_lib/src/vx_lib/logic/objects/: camera.h  full_transform.h  objects.h  simple_transform.h
subprojects/vx_lib/src/vx_lib/logic/traits/: traits.h
subprojects/vx_lib/src/vx_lib/os/: input_helper.cpp  input_helper.h  key_state.h  keys.h  os.h  window.c  window.cpp  window.h  window_context.c  window_context.cpp  window_context.h  window_helper.cpp  window_helper.h
subprojects/vx_lib/src/vx_lib/os/context/: bgfx_context.cpp  bgfx_context.h  wgpu.c  wgpu.h
subprojects/vx_lib/src/vx_lib/utils/math/: vector_helpers.cpp  vector_helpers.h
subprojects/vx_utils/: meson.build
subprojects/vx_utils/src/: vx_default.h  vx_file.c  vx_functions.c  vx_functions.h  vx_math.c  vx_math.h  vx_mem.c  vx_mem.h  vx_option.h  vx_panic.c  vx_panic.h  vx_types.h  vx_vector.h
subprojects/vx_utils/src/vx_utils/: casts.h  clone.h  compare.h  default.h  defer.h  file.c  file.cpp  file.h  foreach.h  functions.c  functions.cpp  functions.h  hash.h  hash_table.h  instance.h  log.c  log.cpp  log.h  macro.h  map.h  math.h  mem.c  mem.cpp  mem.h  option.h  panic.c  panic.cpp  panic.h  slice.h  template.h  to_string.h  types.h  utils.h  vector.h
subprojects/vx_utils/src/vx_utils/allocators/: raw_allocator.cpp  raw_allocator.h
subprojects/vx_utils/src/vx_utils/loggers/: stream_logger.c  stream_logger.cpp  stream_logger.h
subprojects/vx_utils/src/vx_utils/traits/: as_ptr.h  as_slice.h  clone.h  compare.h  default.h  hash.h  iterator.h  len.h  to_string.h  traits.h
subprojects/wgpu/: meson.build
tools/: create_font_atlas_csv_tool.odin  gen_font_atlas_csv.bat  gen_font_atlas_csv.sh  gen_wgpu_bindings.bat  gen_wgpu_bindings.odin  prepare_wgpu.bat  prepare_workspace.bat  prepare_workspace.sh
(+200 files in other folders)
